web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-parens-async-func/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,9)
1|(async) function x (a) {}
 |       ^
